MOTECH-3127: Grouping by task id.

--- a/modules/tasks/tasks/src/main/resources/webapp/messages/messages.properties
+++ b/modules/tasks/tasks/src/main/resources/webapp/messages/messages.properties
@@ -53,6 +53,7 @@ task.settings.submit=Save
 
 task.history.filter.progress=Progress
 task.history.filter.tasks=Tasks
+task.history.filter.onlyLastExecution=Show only last task''s execution
 task.history.filter.dateRange=Date Range
 task.history.filter.from=From
 task.history.filter.to=To
